screenshots for bpmn help

--- a/plugins/bpmn/help/interface.html
+++ b/plugins/bpmn/help/interface.html
@@ -121,7 +121,7 @@
 			<h4>Вкладка "Поведение"</h4>
 
 			<br />
-			<center><img src="pics/interface-settings-tab1.png" alt="Окно настроек QReal:BP"></center>
+			<center><img src="pics/behavior.png" alt="Окно настроек QReal:BP"></center>
 			<br />
 
 			<div>
@@ -134,7 +134,7 @@
 			<h4>Вкладка "Разное"</h4>
 
 			<br />
-			<center><img src="pics/interface-settings-tab3.png" alt="Окно настроек QReal:BP"></center>
+			<center><img src="pics/misc.png" alt="Окно настроек QReal:BP"></center>
 			<br />
 
 			<div>
@@ -143,7 +143,6 @@
 			  <li><i>Рендеринг OpenGL</i> — использовать/не использовать OpenGL для рисования фигур (на некотором оборудовании ускоряет отрисовку элементов).</li>
 			  <li><i>Показывать сплешскрин</i> — показывать/не показывать заставку при старте QReal:BP.</li>
 			  <li><i>Длина списка недавних проектов</i> — позволяет задать длину списка недавних проектов, отображаемого в начальном меню и в меню Файл->Недавние проекты.</li>
-			  <li><i>Режим рисования линии</i> — позволяет выбрать из трёх режимов рисования линий: ломаная, квадратная и кривая линии. В режиме сквадрачивания линий связи между элементами прокладываются на диаграмме автоматически, образуя в точках излома прямые углы (подробнее о создании связей см. <a href="modelling.html#elements">Создание элементов и связей</a>).</li>
 			  <li><i>Рисовать старую линию</i> — показывать/не показывать старое положение связи на диаграмме при ее деформации, а также, цвет которым будет эта старая связь рисоваться.</li>
 			</ul>
 			</div>
@@ -151,7 +150,7 @@
 			<h4>Вкладка "Редактор"</h4>
 
 			<br />
-			<center><img src="pics/interface-settings-tab5.png" alt="Окно настроек QReal:BP"></center>
+			<center><img src="pics/editor.png" alt="Окно настроек QReal:BP"></center>
 			<br />
 
 			<div>
@@ -163,6 +162,9 @@
 			  <li><i>Толщина сетки</i> — толщина линий сетки. Настраивается в зависимости от яркости монитора или проектора.</li>
 			  <li><i>Размер</i> — размер встроенного линкера, т.е. кружка над элементом на диаграмме, осуществляющего создание связей между элементами (см. раздел <a href="modelling.html#elements">Создание элементов и связей</a>).</li>
 			  <li><i>Отступ</i> — отступ встроенного линкера от пиктограммы элемента.</li>
+			  <li><i>Режим рисования линии</i> — позволяет выбрать из трёх режимов рисования линий: ломаная, квадратная и кривая линии. В режиме сквадрачивания линий связи между элементами прокладываются на диаграмме автоматически, образуя в точках излома прямые углы (подробнее о создании связей см. <a href="modelling.html#elements">Создание элементов и связей</a>).</li>
+			  <li><i>Связи-петли</i> — при создании связей с одинаковым началом и концом задаёт, насколько близко к элементу расположена связь.</li>
+			  <li><i>Коэффициент масштабирования</i> — коэффициент масштабирования диаграмм при увеличении/уменьшении с помощью колесика мыши или соответствующих операций панели "Вид".</li>
 			  <li><i>Коэффициент масштабирования</i> — коэффициент масштабирования диаграмм при увеличении/уменьшении с помощью колесика мыши или соответствующих операций панели "Вид".</li>
 			  <li><i>Использовать системный шрифт</i> — выбрать для отображения текста на сцене один из шрифтов операционной системы.</li>
 			  <li><i>Представление</i> — выбор между режимом отображения иконок и названий или только иконок в палитре.</li>
