--- a/plugins/bpmn/help/modelling.html
+++ b/plugins/bpmn/help/modelling.html
@@ -54,7 +54,7 @@
 
 			<br/><br/>
 
-			<center><img src="pics/programming-creation.png" alt="Создание диаграммы"></center>
+			<center><img src="pics/new-diagram.png" alt="Создание диаграммы"></center>
 
 			<br/><br/>
 
@@ -68,7 +68,7 @@
 			Если "бросить" связь на уже существующий элемент, то связь автоматически прикрепится к нему. Если навести на связь курсор мыши, то на ее концах отобразятся серые маркеры:
 			</div>
 
-			<center><img src="pics/programming-link-selected.png" alt="Выделение связи"></center>
+			<center><img src="pics/edge-selected.png" alt="Выделение связи"></center>
 
 			<div>
 			Потянув за один из этих маркеров, можно управлять тем, к каким элементам присоединен тот или иной конец данной связи. Так, чтобы присоединить один из концов связи к элементу, нужно потянуть за соответствующий серый маркер и отпустить его на интересующем элементе. 
@@ -77,12 +77,12 @@
 			<br/>
 
 			<div>
-			Для создания связей в QReal:BP существует ещё один способ — использование встроенных линкеров, т.е. цветных кружков, размещающихся при выделении элементов на диаграмме чуть выше соответствующей иконки. 
+			Для создания связей в QReal:BP существует ещё один способ — использование встроенных линкеров, т.е. цветных кружков, размещающихся при выделении элементов на диаграмме чуть правее соответствующей иконки. 
 			</div>
 
 			<br/>
 
-			<center><img src="pics/programming-linkers.png" alt="Создание связи с помощью линкеров"></center>
+			<center><img src="pics/linker.png" alt="Создание связи с помощью линкеров"></center>
 
 			<br/>
 
@@ -91,7 +91,7 @@
 			</div>
 
 			<br/>
-			<center><img src="pics/programming-linkers-menu.png" alt="Меню встроенных линкеров"></center>
+			<center><img src="pics/linker-menu.png" alt="Меню встроенных линкеров"></center>
 
 			<br/><br/>
 
@@ -112,25 +112,28 @@
 			</div>
 
 			<br/>
-			<center><img src="pics/programming-link-polygon.png" alt="Создание точек излома"></center>
+			<center><img src="pics/break-link.png" alt="Создание точек излома"></center>
 			<br/><br/>
 
 			<div>
-			При этом, если точку излома связи разместить так, что она и две ближайших к ней будут располагаться примерно на одной прямой (см. рисунок ниже), то это приведет к уничтожению этой точки излома и сглаживанию ломаной в этом месте:
+			При этом, если точку излома связи разместить так, что она и две ближайших к ней будут располагаться примерно на одной прямой, то это приведет к уничтожению этой точки излома и сглаживанию ломаной в этом месте.
 			</div>
 
-			<center><img src="pics/programming-link-remove-point.png" alt="Удаление точек излома"></center>
-			<br/><br/>
+			<br/>
 
 			<div>
 			Также удалить точку излома можно, нажав на соответствующий ей серый маркер правой кнопкой мыши и выбрав пункт выпадающего меню "Удалить точку":
 			</div>
 
-			<center><img src="pics/programming-link-remove-menu.png" alt="Удаление точек излома"></center>
+			<center><img src="pics/delete-point.png" alt="Удаление точек излома"></center>
 			<br/><br/>
 
 			<div>
 			При выборе пункта меню "Удалить все точки" все точки изломов связи уничтожаются и линия становится прямой, соединяющей начало и конец ломаной.
+			</div>
+
+			<div>
+			При выборе пункта меню "Развернуть" связь начинает указывать в обратную сторону, при этом все точки излома сохраняются.
 			</div>
 
 			<h3><a name="properties">Редактирование свойств элементов</a></h3>
@@ -152,7 +155,7 @@
 			</div>
 
 			<br/>
-			<center><img src="pics/modelling-gateway-different-types.png" alt="Отображение элемента с различными свойствами"></center>
+			<center><img src="pics/gateway.png" alt="Отображение элемента с различными свойствами"></center>
 
 		</div>
 		<!-- end #content -->
