--- a/plugins/bpmn/help/verification.html
+++ b/plugins/bpmn/help/verification.html
@@ -58,7 +58,7 @@
 
 			<br/>
 
-			<center><img src="pics/verification-errors.png" alt="Проверка диаграммы с ошибками"></center>
+			<center><img src="pics/verification-errors.png" height="500" alt="Проверка диаграммы с ошибками"></center>
 
 			<div>
 			Если ошибок не было обнаружено, верификатор выведет сообщение том, что данная диаграмма или диаграммы корректны:
@@ -66,7 +66,7 @@
 
 			<br/>
 
-			<center><img src="pics/verification-correct.png" alt="Проверка корректной диаграммы"></center>
+			<center><img src="pics/verification-ok.png" height="500" alt="Проверка корректной диаграммы"></center>
 
 		</div>
 		<!-- end #content -->
