--- a/plugins/bpmn/help/verification.html
+++ b/plugins/bpmn/help/verification.html
@@ -36,6 +36,7 @@
 							<li><a href="modelling.html#elements">Создание элементов и связей</a></li>
 							<li><a href="modelling.html#properties">Редактирование свойств элементов</a></li>
 						</ul>
+					<li><a href="lang.html">Описание языка BPMN</a></li>
 					<li><a href="verification.html">Верификация бизнес-процессов</a></li>
 				</ul>
 			</div>
