--- a/plugins/bpmn/help/modelling.html
+++ b/plugins/bpmn/help/modelling.html
@@ -158,6 +158,24 @@
 			<br/>
 			<center><img src="pics/gateway.png" alt="Отображение элемента с различными свойствами"></center>
 
+			<h3><a name="subprocess">Создание подпроцессов</a></h3>
+
+			<div>
+			QReal:BP поддерживает элемент языка BPMN, представляющий собой подпроцесс внутри какого-либо процесса. Этот элемент может быть связан с какой-либо диаграммой BPMN из того же проекта. В контекстном меню элемента-подпроцесса присутствует пункт "Установить подпроцесс", в выпадающем меню которого можно указать диаграмму, с которой будет связан подпроцесс (при выборе пункта "Новая диаграмма" она создастся автоматически и подпроцесс будет связан с ней):
+			</div>
+
+			<br/>
+
+			<div>
+			После того как подпроцесс связан с диаграммой, в меню появляются дополнительные пункты: "Удалить подпроцесс" и "Редактировать подпроцесс":
+			</div>
+
+			<br/>
+
+			<div>
+			При выборе первого из них удаляется только связь элемента с диаграммой, но не диаграмма. Второй из них позволяет переключиться на редактирование диаграммы подпроцесса. Это также можно сделать с помощью двойного щелчка на элементе. 
+			</div>
+
 		</div>
 		<!-- end #content -->
 		<div style="clear: both;">&nbsp;</div>
