documentation: expanding subprocesses and new types of flows; translations updated

--- a/plugins/bpmn/help/lang.html
+++ b/plugins/bpmn/help/lang.html
@@ -55,14 +55,23 @@
 			<h3><a name="activities">Действия (Activities)</a></h3>
 
 			<div>
-			<b>Задание (Task)</b> - обозначает элементарное действие в процессе, исполняемое человеком или системой исполнения бизнес-процессов. Имеет свойство <i>Text</i>, отображаемое в виде надписи внутри элемента.	
+			<b>Задание (Task)</b> - обозначает элементарное действие в процессе, исполняемое человеком или системой исполнения бизнес-процессов. Имеет следующие свойства:
+			<ul>
+				<li><i>Name</i> - отображается в виде надписи внутри элемента.</li>
+				<li><i>Loop Type</i> - указывает на то, повторяется ли действие несколько раз:</li>
+				<ul>
+					<li><i>No Loop</i> - действие выполняется один раз.</li>
+					<li><i>Multiple Instances (Parallel)</i> - одновременно выполняется несколько экземпляров действия.</li>
+					<li><i>Multiple Instances (Sequential)</i> - действие повторяется последовательно несколько раз.</li>
+				</ul>
+			</ul>
 			</div>
 
 			<br/>
 			<center><img src="pics/bpmn-task.png" alt="Задание"></center>
 
 			<div>
-			<b>Подпроцесс (Subprocess)</b> - составное действие внутри процесса, само также являющееся бизнес-процессом. Подробнее о подпроцессах см. <a href="modelling.html#subprocess">Создание подпроцессов</a>. Подпроцесс также имеет свойство <i>Text</i>, отображаемое под элементом.
+			<b>Подпроцесс (Subprocess)</b> - составное действие внутри процесса, само также являющееся бизнес-процессом. Подробнее о подпроцессах см. <a href="modelling.html#subprocess">Создание подпроцессов</a>. Имеет свойства, аналогичные свойствам элемента "Задание" (Task).
 			</div>
 
 			<center><img src="pics/bpmn-subprocess.png" alt="Подпроцесс"></center>
@@ -113,8 +122,10 @@
 				<ul>
 					<li><i>Type</i> - тип события:
 						<ul>
-							<li><i>None (Простое)</i> - завершение процесса без каких-либо дополнительных действий.</li>
-							<li><i>Send Message (Отправка сообщения)</i> - процесс завершается отправкой сообщения.</li>
+							<li><i>None (Простое)</i> - завершение данной ветви управления без каких-либо дополнительных действий.</li>
+							<li><i>Message (Отправка сообщения)</i> - ветвь завершается отправкой сообщения.</li>
+							<li><i>Terminate (Завершение)</i> - немедленное завершение всех активных ветвей управления.</li>
+							<li><i>Signal (Сигнал)</i> - генерация сигнала, который может быть перехвачен в другой части процесса.</li>
 						</ul>
 					<li><i>Text</i> - отображается в виде текста под элементом.</li>
 				</ul>
@@ -130,6 +141,24 @@
 			</div>
 
 			<center><img src="pics/bpmn-sequence-flow.png" alt="Поток управления"></center>
+
+			<div>
+			<b>Поток сообщений (Message Flow)</b> - моделирует посылку сообщений одного участника процесса другому. Имеет свойство <i>Text</i>, отображаемое в виде текста на стрелке.
+			</div>
+			
+			<center><img src="pics/bpmn-message-flow.png" alt="Поток сообщений"></center>
+
+			<div>
+			<b>Поток сигнала (Signal Flow)</b> - прикрепляется к границам элементов-действий (Activities), моделирует обработку сигнала, брошенного в момент выполнения задания, к которому прикреплена данная связь (при этом выполнение задания прерывается). Имеет свойство <i>Text</i>, отображаемое в виде текста на стрелке.
+			</div>
+			
+			<center><img src="pics/bpmn-signal-flow.png" alt="Поток сигнала"></center>
+
+			<div>
+			<b>Поток таймера (Timer Flow)</b> - прикрепляется к границам элементов-действий (Activities), активируется при наступлении определённого времени во время выполнения задания, к которому прикреплена связь (при этом выполнение задания прерывается). Имеет свойство <i>Text</i>, отображаемое в виде текста на стрелке.
+			</div>
+			
+			<center><img src="pics/bpmn-timer-flow.png" alt="Поток таймера"></center>
 
 			<h3><a name="gateways">Развилки (Gateways)</a></h3>
 
@@ -152,17 +181,20 @@
 			<h3><a name="swimlanes">Роли (Swimlanes)</a></h3>
 
 			<div>
-			<b>Пул (Pool)</b> - представляет собой участника процесса. Может содержать внутри себя одну или несколько дорожек. Имеет свойство <i>Text</i>, изображённое в виде вертикально направленного текста в левой части элемента.
+			<b>Пул (Pool)</b> - представляет собой участника процесса. Может содержать внутри себя одну или несколько дорожек. Имеет следующие свойства: 
+			<ul>
+				<li><i>Multiple</i> - указывает, является ли участник единственным, или же таких участников в процессе может быть много.</li>
+				<li><i>Text</i> - изображённое в виде вертикально направленного текста в левой части элемента.</li>
 			</div>
 
 			<br/>
-			<center><img src="pics/bpmn-swimlane.png" alt="Пул"></center>
+			<center><img src="pics/bpmn-pool.png" alt="Пул"></center>
 
 			<div>
 			<b>Дорожка (Lane)</b> - представляет собой роль внутри участника процесса. Содержит в себе элементы потока управления. Имеет свойство <i>Text</i>, изображённое в виде вертикально направленного текста в левой части элемента.
 			</div>
 
-			<center><img src="pics/bpmn-swimlane.png" alt="Дорожка"></center>
+			<center><img src="pics/bpmn-lane.png" alt="Дорожка"></center>
 
 		</div>
 		<!-- end #content -->
