--- a/plugins/bpmn/help/modelling.html
+++ b/plugins/bpmn/help/modelling.html
@@ -168,14 +168,25 @@
 			<center><img src="pics/subprocess-create.png" alt="Создать подпроцесс"></center>
 
 			<div>
-			После того как подпроцесс связан с диаграммой, в меню появляются дополнительные пункты: "Удалить подпроцесс" и "Раскрыть подпроцесс":
+			После того как подпроцесс связан с диаграммой, в меню появляются дополнительные пункты: "Развернуть подпроцесс", "Удалить подпроцесс" и "Раскрыть подпроцесс":
 			</div>
 
 			<br/>
 			<center><img src="pics/subprocess-edit.png" alt="Редактировать подпроцесс"></center>
 
 			<div>
-			При выборе первого из них удаляется только связь элемента с диаграммой, но не диаграмма. Второй из них позволяет переключиться на редактирование диаграммы подпроцесса. Это также можно сделать с помощью двойного щелчка на элементе. 
+			При выборе пункта "Удалить подпроцесс" удаляется только связь элемента с диаграммой, но не диаграмма. 
+			<br>
+			Пункт "Раскрыть подпроцесс" позволяет переключиться на редактирование диаграммы подпроцесса. Это также можно сделать с помощью двойного щелчка на элементе. 
+			<br>
+			При выборе пункта "Развернуть подпроцесс" элемент увеличится в размерах, при этом диаграмма подпроцесса будет отображаться внутри него. Окружающие элементы при этом сдвинутся, исключая перекрытие с данным: 
+			</div>
+
+			<br/>
+			<center><img src="pics/subprocess-expanded.png" alt="Развёрнутый подпроцесс"></center>
+
+			<div>
+			Развёрнутый подпроцесс можно свернуть путём выбора пункта "Свернуть подпроцесс" в его контекстном меню.
 			</div>
 
 		</div>
